# next-chatbot

./: README.md  main.py  package-lock.json  pyproject.toml  vs2022_buildtools_config.vsconfig
backend/: main.py
backend/utils/: chunker.py  collection.py  intent.py  memory.py  query.py  rewrite.py  sql.py
data/: MYRA-22-07-24-22-7-24.csv  README.md  employee.csv
db/: csv_db
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/[userId]/: page.tsx
